--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -19,7 +19,7 @@
             </a>
         </div>
         <div class="copyright">
-            Made with ♥️ and ☕ by myself. No lines of JQuery were <span class="strike">hurt</span> used in making this website. Code source available on
+            Hand-crafted with ♥️ and ☕ by myself. No lines of JQuery were <span class="strike">hurt</span> used in making this website. Code source available on
             <a href="#">GitHub</a>. Try typing "unicorn" anywhere.
         </div>
     </footer>
