--- a/src/html-partials/nav.html
+++ b/src/html-partials/nav.html
@@ -1,6 +1,7 @@
 <header>
-    <a href="#" class="logo">
-        <svg version="1.1" class="logo-letters" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    <nav>
+        <a href="index.html" class="logo">
+            <svg version="1.1" class="logo-letters" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          viewBox="0 0 159.9 100.7" style="enable-background:new 0 0 159.9 100.7;" xml:space="preserve">
             <g id="XMLID_16_">
                 <path id="XMLID_17_" class="first-letter" d="M0.9,1.4c6.9-3.6,12.2,4.1,12.2,9.2c0,10.2-1.5,37.3-0.8,39.6c0.7-3,11.4-39.3,22.2-32.9
@@ -17,11 +18,10 @@
                      M107.6,61.9c8.7-2.5,24.2-7,25-7c-3.2-1.7-6.4-3.3-9.6-4.1c-3.9-0.8-14.2-0.8-14.2,0C108,54,108.4,58,107.6,61.9z"/>
             </g>
         </svg>
-    </a>
+        </a>
 
-    <nav>
         <ul class="main-nav">
-            <li><a href="">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contact</a></li>
             <li class="line"></li>
