--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,15 @@
-<!doctype html>
-<html class="no-js" lang="">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Website Title</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+@@include('head.html')
 
-    <link rel="stylesheet" href="styles/main.css">
+@@include('nav.html')
 
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-</head>
-<body>
+<main>
+    <h1 class="main-title">👋 I'm <a href="#">Maël Brunet</a>, a
+        <span
+            class="txt-rotate"
+            data-period="2000"
+            data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span>
+        <div>based in Brussels, Belgium.</div>
+    </h1>
+</main>
 
-
-    @@include('header.html')
-
-    <main>
-        <h1 class="main-title">👋 I'm <a href="#">Maël Brunet</a>, a
-            <span
-                class="txt-rotate"
-                data-period="2000"
-                data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span>
-            <div>based in Brussels, Belgium.</div>
-        </h1>
-    </main>
-
-    @@include('footer.html')
+@@include('footer.html')
