Add mobile nav and tweak some colors

--- a/src/html-partials/nav.html
+++ b/src/html-partials/nav.html
@@ -20,6 +20,26 @@
         </svg>
         </a>
 
+        <button class="menu-toggle js-toggle-open">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="-261 367 72 107" class="menu-icon">
+                <g class="top-bun">
+                    <path d="M-257.2 408.7h64.4c-1.1-10.3-15.1-18.5-32.2-18.5s-31.1 8.2-32.2 18.5zm65.8 2.7h-67.2c-.7 0-1.3-.6-1.3-1.3 0-12.4 15.7-22.5 34.9-22.5 19.3 0 34.9 10.1 34.9 22.5 0 .7-.6 1.3-1.3 1.3"/>
+                    <path d="M-245.1 400.3c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9.1 1.6.8 1.6 1.6"/>
+                    <path d="M-235.7 402.7c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9.1 1.6.8 1.6 1.6"/>
+                    <path d="M-233.3 395c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9 0 1.6.7 1.6 1.6"/>
+                    <path d="M-201.4 401.2c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9 0 1.6.7 1.6 1.6"/>
+                    <path d="M-210.1 396.2c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9 0 1.6.7 1.6 1.6"/>
+                    <path d="M-215.1 401.9c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9 0 1.6.7 1.6 1.6"/>
+                    <path d="M-220.2 394.3c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9 0 1.6.7 1.6 1.6"/>
+                    <path d="M-225.7 398.8c0 .9-.7 1.6-1.6 1.6-.9 0-1.6-.7-1.6-1.6 0-.9.7-1.6 1.6-1.6.9 0 1.6.7 1.6 1.6"/>
+                </g>
+                <path class="salad" d="M-194.7 425.2h-6.5c-1.4 3.6-3 7.1-4.3 7.1-2.3-.2-6.6-6.4-17.8-7.1h-32.1c-3.1 0-5.6 2.5-5.6 5.6 0 3.1 2.5 5.6 5.6 5.6h60.7c3.1 0 5.6-2.5 5.6-5.6 0-3.1-2.5-5.6-5.6-5.6"/>
+                <path class="meat" d="M-239.7 421.6c-2.7 0-5.3-1.2-8-2.4-.5-.2-1-.4-1.5-.7-5.7-2.5-8-.9-9.5 1.2-.4.6-1.3.7-1.9.3-.6-.4-.7-1.3-.3-1.9 2.9-4 6.9-4.6 12.7-2.1.5.2 1 .5 1.5.7 4.5 2.1 7.6 3.4 11.8.3 5.8-4.4 9.8-3.5 18.3-.2 5.9 2.3 8.5.8 11.6-1 .9-.5 1.8-1 2.8-1.4 4.9-2.1 11.8 3.1 12.5 3.6.6.5.7 1.3.3 1.9-.4.6-1.3.7-1.9.3-1.8-1.3-7-4.5-9.9-3.3-.9.4-1.7.8-2.5 1.3-3.2 1.8-6.9 3.9-13.9 1.1-7.9-3.1-10.9-3.8-15.7-.2-2.2 1.8-4.3 2.5-6.4 2.5"/>
+                <path class="bottom-bun" d="M-257.3 441.7v3.8c0 2.8 3.5 5.2 6.3 5.2h51.9c2.8 0 6.3-2.4 6.3-5.2v-3.8h-64.5zm58.3 11.7h-52c-4.1 0-9-3.4-9-7.9v-5.1c0-.3.1-.7.4-.9s.6-.4.9-.4h67.2c.7 0 1.3.6 1.3 1.3v5.1c.1 4.5-4.7 7.9-8.8 7.9"/>
+            </svg>
+            <div class="menu-text">Menu</div>
+        </button>
+
         <ul class="main-nav">
             <li><a href="about.html">About</a></li>
             <li><a href="">Portfolio</a></li>
