--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 
 @@include('nav.html')
 
-<main>
-    <h1 class="main-title">👋 I'm <a href="#">Maël Brunet</a>, a
+<main class="home">
+    <h1 class="main-title">I'm <a href="about.html">Maël Brunet</a>, a
         <span
             class="txt-rotate"
             data-period="2000"
