--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -1,18 +1,18 @@
     <footer>
         <div class="social">
-            <a href="#" class="social-link">
+            <a href="https://www.linkedin.com/in/ma%C3%ABl-brunet-b5876118/" target="_blank" class="social-link">
                 <svg viewBox="0 0 100 100" class="social-icon">
                     <use xlink:href="images/svg-symbols.svg#linkedin"></use>
                 </svg>
             </a>
 
-            <a href="#" class="social-link">
+            <a href="https://codepen.io/Maelig/" target="_blank" class="social-link">
                 <svg viewBox="0 0 100 100" class="social-icon">
                     <use xlink:href="images/svg-symbols.svg#codepen"></use>
                 </svg>
             </a>
 
-            <a href="#" class="social-link">
+            <a href="https://twitter.com/maelb" target="_blank" class="social-link">
                 <svg viewBox="0 0 100 100" class="social-icon">
                     <use xlink:href="images/svg-symbols.svg#twitter"></use>
                 </svg>
@@ -20,7 +20,7 @@
         </div>
         <div class="copyright">
             Hand-crafted with ♥️ and ☕ by myself. No lines of JQuery were <span class="strike">hurt</span> used in making this website. Code source available on
-            <a href="#">GitHub</a>. Try typing "unicorn" anywhere.
+            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>. Try typing "unicorn" anywhere.
         </div>
     </footer>
 
