Finish contact page and change logo hover animation

--- a/src/about.html
+++ b/src/about.html
@@ -6,10 +6,10 @@
     <div class="container">
         <img src="images/mael.jpg" alt="Maël Brunet" class="me">
         <h1>About</h1>
-        <p>My name is Maël Brunet, I'm a self-taught french (front-end) web developer living in Brussels, Belgium and currently working for
+        <p>I'm a self-taught french (front-end) web developer living in Brussels, Belgium and currently working for
             <a href="https://www.emakina.be/" target="_blank">Emakina</a>, a digital agency.</p>
         <p>I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript. I also write some back-end code when needed.</p>
-        <h2>Things I<span> ❤ </span>️(and I like to think I do a decent job at)</h2>
+        <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
         <ul class="❤">
             <li>
                 <div class="icon html">&lt/&gt</div>
@@ -61,7 +61,7 @@
 
             <li>
                 <div class="icon animation"></div>
-                <div class="text">Meaningful animations</div>
+                <div class="text">Meaningful or playful animations</div>
             </li>
 
             <li>
@@ -97,14 +97,14 @@
 
             <li>
                 <div class="icon kiss"><abbr title="Keep It Simple, Stupid">KISS</abbr></div>
-                <div class="text">I believe one of the key responsibilities of a good developer is to manage complexity.</div>
+                <div class="text">Keeping things simple. I believe one of the key responsibilities of a good developer is to manage complexity.</div>
             </li>
 
             <li>
                 <svg viewBox="0 0 100 100" class="icon">
                     <use xlink:href="images/svg-symbols.svg#agile"></use>
                 </svg>
-                <div class="text">Agile development</div>
+                <div class="text">Agile methodologies and good work organisation</div>
             </li>
         </ul>
         <h2>Outside of web development</h2>
