--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 @@include('nav.html')
 
 <main class="home">
-    <h1 class="main-title">I'm <a href="about.html">Maël Brunet</a>, a
+    <h1 class="main-title">👋 I'm <a href="about.html">Maël Brunet</a>, a
         <span
             class="txt-rotate"
             data-period="2000"
