Add transition effect between pages and refactor JS (mobile nav still broken)

--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -26,6 +26,7 @@
 
     <script src="scripts/vendor/svg4everybody.js"></script>
     <script src="scripts/vendor/typing.js"></script>
+    <script src="scripts/vendor/barba.js"></script>
     <script src="scripts/vendor/cornify.js"></script>
     <script src="scripts/main.js"></script>
 
