--- a/src/html-partials/nav.html
+++ b/src/html-partials/nav.html
@@ -20,7 +20,7 @@
         </svg>
         </a>
 
-        <button class="menu-toggle js-toggle-open">
+        <button class="menu-toggle js-toggle-active">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-261 367 72 107" class="menu-icon">
                 <g class="top-bun">
                     <path d="M-257.2 408.7h64.4c-1.1-10.3-15.1-18.5-32.2-18.5s-31.1 8.2-32.2 18.5zm65.8 2.7h-67.2c-.7 0-1.3-.6-1.3-1.3 0-12.4 15.7-22.5 34.9-22.5 19.3 0 34.9 10.1 34.9 22.5 0 .7-.6 1.3-1.3 1.3"/>
