--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,16 @@
 
 @@include('nav.html')
 
-<main class="home">
-    <h1 class="main-title">👋 I'm <a href="about.html">Maël Brunet</a>, a
-        <span
-            class="txt-rotate"
-            data-period="2000"
-            data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span>
-        <div>based in Brussels, Belgium.</div>
-    </h1>
-</main>
+<div id="barba-wrapper">
+    <main class="barba-container home">
+        <h1 class="main-title">👋 I'm <a href="about.html">Maël Brunet</a>, a
+            <span
+                    class="txt-rotate"
+                    data-period="2000"
+                    data-rotate='[ "front-end developer", "UI designer", "problem-solver" ]'></span>
+            <div>based in Brussels, Belgium.</div>
+        </h1>
+    </main>
+</div>
 
 @@include('footer.html')
