Concat all vendor scripts

--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -24,10 +24,7 @@
         </div>
     </footer>
 
-    <script src="scripts/vendor/svg4everybody.js"></script>
-    <script src="scripts/vendor/typing.js"></script>
-    <script src="scripts/vendor/barba.js"></script>
-    <script src="scripts/vendor/cornify.js"></script>
+    <script src="scripts/vendors.js"></script>
     <script src="scripts/main.js"></script>
 
 </body>
