Change some copy and small visual fixes

--- a/src/contact.html
+++ b/src/contact.html
@@ -20,11 +20,11 @@
                     <label for="email">Your email : <abbr title="This field is required">*</abbr></label>
                     <input type="email" name="email" id="email" required>
                     <label for="message">Your message : <abbr title="This field is required">*</abbr></label>
-                    <textarea name="message" id="message" cols="30" rows="8" required></textarea>
-                    <p>All fields marked with <abbr title="This field is required">*</abbr> are required.</p>
+                    <textarea name="message" id="message" cols="26" rows="8" required></textarea>
+                    <p class="required-message">All fields marked with <abbr title="This field is required">*</abbr> are required.</p>
                     <div class="button"><input type="submit" value="Send"></div>
                 </form>
-                <p>Or feel free to drop me a line at maelbrunet<span class="at">[at]</span>gmail.com</p>
+                <p>Or feel free to drop me a line 📧 at maelbrunet<span class="at">[at]</span>gmail.com</p>
             </section>
         </div>
     </main>
