--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
         <div class="container">
             <img src="images/mael.jpg" alt="Maël Brunet" class="me">
             <h1>About</h1>
-            <p>I'm a self-taught french (front-end) web developer living in Brussels, Belgium and currently working for
+            <p>I'm a self-taught french (front-end) web developer 👨‍💻 living in Brussels, Belgium 🇧🇪 and currently working for
                 <a href="https://www.emakina.be/" target="_blank">Emakina</a>, a digital agency.</p>
             <p>I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript. I also write some back-end code when needed.</p>
             <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
@@ -57,22 +57,24 @@
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#react"></use>
                     </svg>
-                    <div class="text"><div>The right framework for the right job (<a href="https://facebook.github.io/react/" target="_blank">React</a> <em>is</em> pretty rad though)</div></div>
+                    <div class="text"><div>The right framework for the right job (<a href="https://facebook.github.io/react/" target="_blank">React</a> <em>is</em> pretty cool though)</div></div>
                 </li>
 
                 <li>
                     <div class="icon animation"></div>
-                    <div class="text">Meaningful or playful animations</div>
+                    <div class="text">Meaningful and playful animations</div>
                 </li>
 
                 <li>
                     <div class="icon svg"><abbr title="Scalable Vector Graphics">SVG</abbr></div>
-                    <div class="text">Icons, logos, complex animations</div>
+                    <div class="text">Perfect for icons, logos, animations</div>
                 </li>
 
                 <li>
-                    <div class="icon jam">JAMstack</div>
-                    <div class="text"><div><a href="https://jamstack.org/" target="_blank">JavaScript, APIs and Markup</a> is my favourite stack</div></div>
+                    <svg viewBox="0 0 100 100" class="icon">
+                        <use xlink:href="images/svg-symbols.svg#eye"></use>
+                    </svg>
+                    <div class="text">Attention to detail : it's the little things that matter</div>
                 </li>
 
                 <li>
@@ -98,21 +100,21 @@
 
                 <li>
                     <div class="icon kiss"><abbr title="Keep It Simple, Stupid">KISS</abbr></div>
-                    <div class="text">Keeping things simple. I believe one of the key responsibilities of a good developer is to manage complexity.</div>
+                    <div class="text">Keeping things simple : I believe one of the key responsibilities of a good developer is to manage / reduce complexity.</div>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#agile"></use>
                     </svg>
-                    <div class="text">Agile methodologies and good work organisation</div>
+                    <div class="text">Agile methodologies and clear, open communication</div>
                 </li>
             </ul>
             <h2>Outside of web development</h2>
-            <p>I love to run, I find it physically satisfying and I like pushing myself to improve on a regular basis.</p>
-            <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients, cooking (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company. I find the whole process very similar to web development.</p>
-            <p>I play video games (though not as much as I used to), mostly on PC, and I have a particular fondness for rich narrative experiences and emergent stories.</p>
-            <p>Other than that, I enjoy spending time with friends, preferably over a nice, cool beer.</p>
+            <p>I love hiking and running 🏃, especially out in the woods 🌳.</p>
+            <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients 🥑🍄️🧀, cooking 👨‍🍳 (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company 🍽️. I find the whole process very similar to web development in some aspects.</p>
+            <p>I play video games 🕹️ (though not as much as I used to), mostly on PC, and I have a particular fondness for rich narrative experiences and emergent stories.</p>
+            <p>Other than that, I enjoy spending time with friends, preferably over a nice, cool beer 🍺.</p>
         </div>
     </main>
 </div>
