--- a/src/html-partials/nav.html
+++ b/src/html-partials/nav.html
@@ -42,7 +42,7 @@
 
         <ul class="main-nav">
             <li><a href="about.html">About</a></li>
-            <li><a href="">Portfolio</a></li>
+            <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li class="line"></li>
         </ul>
