--- a/src/about.html
+++ b/src/about.html
@@ -112,7 +112,7 @@
             </ul>
             <h2>Outside of web development</h2>
             <p>I love hiking and running 🏃, especially out in the woods 🌳.</p>
-            <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients 🥑🍄️🧀, cooking 👨‍🍳 (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company 🍽️. I find the whole process very similar to web development in some aspects.</p>
+            <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients 🍄️🍗🍅, cooking 👨‍🍳 (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company 🍽️. I find the whole process very similar to web development in some aspects.</p>
             <p>I play video games 🕹️ (though not as much as I used to), mostly on PC, and I have a particular fondness for rich narrative experiences and emergent stories.</p>
             <p>Other than that, I enjoy spending time with friends, preferably over a nice, cool beer 🍺.</p>
         </div>
