--- a/src/html-partials/head.html
+++ b/src/html-partials/head.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Website Title</title>
-    <meta name="description" content="">
+    <title>Maël Brunet, web developer & designer</title>
+    <meta name="description" content="The personal website of Maël Brunet, front-end developer & UI designer based in Brussels, Belgium.">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
