Remove unicorns on mobile

--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -20,7 +20,7 @@
         </div>
         <div class="copyright">
             Hand-crafted with ♥️ and ☕ by myself. No lines of JQuery were <span class="strike">hurt</span> used in making this website. Code source available on
-            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>. Try typing "unicorn" anywhere.
+            <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>.<span class="unicorns"> Try typing "unicorn" anywhere.</span>
         </div>
     </footer>
 
