Change anchor links border styles and make some elements more semantic

--- a/src/about.html
+++ b/src/about.html
@@ -14,100 +14,100 @@
             <ul class="❤">
                 <li>
                     <div class="icon html">&lt/&gt</div>
-                    <div class="text">Clean, semantic HTML markup</div>
+                    <p class="text">Clean, semantic HTML markup</p>
                 </li>
 
                 <li>
                     <div class="icon">{ }</div>
-                    <div class="text">Responsive, well scoped CSS</div>
+                    <p class="text">Responsive, well scoped CSS</p>
                 </li>
 
                 <li>
                     <div class="icon">( )</div>
-                    <div class="text">Modular, composable JavaScript</div>
+                    <p class="text">Modular, composable JavaScript</p>
                 </li>
 
                 <li>
                     <div class="icon">//</div>
-                    <div class="text">Well commented, maintainable code</div>
+                    <p class="text">Well commented, maintainable code</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#speedometer"></use>
                     </svg>
-                    <div class="text">Lightweight, performant websites</div>
+                    <p class="text">Lightweight, performant websites</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#a11y"></use>
                     </svg>
-                    <div class="text">Accessibility — the web is for everyone</div>
+                    <p class="text">Accessibility — the web is for everyone</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#smartphone"></use>
                     </svg>
-                    <div class="text">Beautiful, clearly understandable UI</div>
+                    <p class="text">Beautiful, clearly understandable UI</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#react"></use>
                     </svg>
-                    <div class="text"><div>The right framework for the right job (<a href="https://facebook.github.io/react/" target="_blank">React</a> <em>is</em> pretty cool though)</div></div>
+                    <p class="text"><span>The right framework for the right job (<a href="https://facebook.github.io/react/" target="_blank">React</a> <em>is</em> pretty cool though)</span></p>
                 </li>
 
                 <li>
                     <div class="icon animation"></div>
-                    <div class="text">Meaningful and playful animations</div>
+                    <p class="text">Meaningful and playful animations</p>
                 </li>
 
                 <li>
                     <div class="icon svg"><abbr title="Scalable Vector Graphics">SVG</abbr></div>
-                    <div class="text">Perfect for icons, logos, animations</div>
+                    <p class="text">Perfect for icons, logos, animations</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#eye"></use>
                     </svg>
-                    <div class="text">Attention to detail : it's the little things that matter</div>
+                    <p class="text">Attention to detail : it's the little things that matter</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#team"></use>
                     </svg>
-                    <div class="text">Code reviews, discussing and sharing best practices</div>
+                    <p class="text">Code reviews, discussing and sharing best practices</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#wrench"></use>
                     </svg>
-                    <div class="text">Finding the right tools for the perfect build process</div>
+                    <p class="text">Finding the right tools for the perfect build process</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#styleguide"></use>
                     </svg>
-                    <div class="text">Styleguide and design systems to build consistent UI at scale</div>
+                    <p class="text">Styleguide and design systems to build consistent UI at scale</p>
                 </li>
 
                 <li>
                     <div class="icon kiss"><abbr title="Keep It Simple, Stupid">KISS</abbr></div>
-                    <div class="text">Keeping things simple : I believe one of the key responsibilities of a good developer is to manage / reduce complexity.</div>
+                    <p class="text">Keeping things simple : I believe one of the key responsibilities of a good developer is to manage / reduce complexity.</p>
                 </li>
 
                 <li>
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#agile"></use>
                     </svg>
-                    <div class="text">Agile methodologies and clear, open communication</div>
+                    <p class="text">Agile methodologies and clear, open communication</p>
                 </li>
             </ul>
             <h2>Outside of web development</h2>
