--- a/src/contact.html
+++ b/src/contact.html
@@ -20,9 +20,9 @@
                     <label for="email">Your email : <abbr title="This field is required">*</abbr></label>
                     <input type="email" name="email" id="email" required>
                     <label for="message">Your message : <abbr title="This field is required">*</abbr></label>
-                    <textarea name="message" id="message" cols="26" rows="8" required></textarea>
+                    <textarea name="message" id="message" cols="40" rows="8" required></textarea>
                     <p class="required-message">All fields marked with <abbr title="This field is required">*</abbr> are required.</p>
-                    <div class="button"><input type="submit" value="Send"></div>
+                    <button><input type="submit" value="Send"></button>
                 </form>
                 <p>Or feel free to drop me a line 📧 at maelbrunet<span class="at">[at]</span>gmail.com</p>
             </section>
