Flag CSS and font for preloading

--- a/src/html-partials/head.html
+++ b/src/html-partials/head.html
@@ -24,7 +24,7 @@
       ga('send', 'pageview');
     </script>
 
-    <link rel="stylesheet" href="styles/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" rel="preload" href="styles/main.css">
+    <link rel="stylesheet" rel="preload" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body>
