Add a sensible line-height and reduce nav animation duration

--- a/src/about.html
+++ b/src/about.html
@@ -100,7 +100,7 @@
 
                 <li>
                     <div class="icon kiss"><abbr title="Keep It Simple, Stupid">KISS</abbr></div>
-                    <p class="text">Keeping things simple : I believe one of the key responsibilities of a good developer is to manage / reduce complexity.</p>
+                    <p class="text">I believe one of the key responsibilities of a good developer is to manage / reduce complexity.</p>
                 </li>
 
                 <li>
