--- a/src/contact.html
+++ b/src/contact.html
@@ -22,7 +22,7 @@
                     <label for="message">Your message : <abbr title="This field is required">*</abbr></label>
                     <textarea name="message" id="message" cols="40" rows="8" required></textarea>
                     <p class="required-message">All fields marked with <abbr title="This field is required">*</abbr> are required.</p>
-                    <button><input type="submit" value="Send"></button>
+                    <div class="button"><input type="submit" value="Send"></div>
                 </form>
                 <p>Or feel free to drop me a line 📧 at maelbrunet<span class="at">[at]</span>gmail.com</p>
             </section>
