Update some copy

--- a/src/about.html
+++ b/src/about.html
@@ -7,7 +7,7 @@
         <div class="container">
             <img src="images/mael.jpg" alt="Maël Brunet" class="me">
             <h1>About</h1>
-            <p>I'm a self-taught french (front-end) web developer 👨‍💻 living in Brussels, Belgium 🇧🇪 and currently working for
+            <p>I'm a self-taught french (front-end) web developer 👨‍💻 and UI designer ✏️ living in Brussels, Belgium 🇧🇪 and currently working for
                 <a href="https://www.emakina.be/" target="_blank">Emakina</a>, a digital agency.</p>
             <p>I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript. I also write some back-end code when needed.</p>
             <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
