--- a/src/resume.html
+++ b/src/resume.html
@@ -9,10 +9,6 @@
             <p class="notice">This page is optimised for print️, feel free to print it out or export it to PDF if that's your thing. For more information about myself, head over to the
                 <a href="about.html">about</a> page.</p>
 
-            <div class="contact">
-
-            </div>
-
             <h2>Summary</h2>
             <ul class="summary">
                 <li>I am a self-taught front-end web developer and UI designer, based in Brussels (Belgium).</li>
@@ -28,7 +24,7 @@
             <ul class="work-xp">
                 <li>
                     <div class="meta">
-                        <div class="org">Emakina</div>
+                        <div class="org"><a href="https://www.emakina.be/" target="_blank">Emakina</a></div>
                         <div class="year">Jan 2016 - now</div>
                     </div>
                     <div class="description">
@@ -44,7 +40,7 @@
                 </li>
                 <li>
                     <div class="meta">
-                        <div class="org">OpenForum Europe</div>
+                        <div class="org"><a href="http://www.openforumeurope.org/" target="_blank">OpenForum Europe</a></div>
                         <div class="year">May 2012 - Dec 2015</div>
                     </div>
                     <div class="description">
