Update some copy

--- a/src/contact.html
+++ b/src/contact.html
@@ -24,7 +24,7 @@
                     <p class="required-message">All fields marked with <abbr title="This field is required">*</abbr> are required.</p>
                     <div class="button"><input type="submit" value="Send"></div>
                 </form>
-                <p>Or feel free to drop me a line 📧 at maelbrunet<span class="at">[at]</span>gmail.com</p>
+                <p>Or feel free to drop me a line at maelbrunet<span class="at">[at]</span>gmail.com</p>
             </section>
         </div>
     </main>
