--- a/src/about.html
+++ b/src/about.html
@@ -7,9 +7,9 @@
         <div class="container">
             <img src="images/mael.jpg" alt="Maël Brunet" class="me">
             <h1>About</h1>
-            <p>I'm a self-taught french (front-end) web developer 👨‍💻 and UI designer ✏️ living in Brussels, Belgium 🇧🇪 and currently working for
+            <p>I'm a self-taught french (front-end) web developer and UI designer living in Brussels, Belgium and currently working for
                 <a href="https://www.emakina.be/" target="_blank">Emakina</a>, a digital agency.</p>
-            <p>I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript. I also write some back-end code when needed.</p>
+            <p>I code mostly on the client-side, designing accessible and beautiful interfaces with HTML & CSS, and programming awesome experiences with JavaScript.</p>
             <h2>Things I<span> ❤ </span>️(and I like to think I'm pretty good at)</h2>
             <ul class="❤">
                 <li>
@@ -111,9 +111,9 @@
                 </li>
             </ul>
             <h2>Outside of web development</h2>
-            <p>I love hiking and running 🏃, especially out in the woods 🌳.</p>
-            <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients 🍄️🍗🍅, cooking 👨‍🍳 (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company 🍽️. I find the whole process very similar to web development in some aspects.</p>
-            <p>I play video games 🕹️ (though not as much as I used to), mostly on PC, and I have a particular fondness for rich narrative experiences and emergent stories.</p>
+            <p>I love hiking and running, especially out in the woods.</p>
+            <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients, cooking (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company. I find the whole process very similar to web development in some aspects.</p>
+            <p>I play video games (though not as much as I used to), mostly on PC, and I have a particular fondness for rich narrative experiences and emergent stories.</p>
             <p>Other than that, I enjoy spending time with friends, preferably over a nice, cool beer 🍺.</p>
         </div>
     </main>
