--- a/src/html-partials/head.html
+++ b/src/html-partials/head.html
@@ -25,6 +25,13 @@
     </script>
 
     <link rel="stylesheet" rel="preload" href="styles/main.css">
+    <noscript>
+        <style>
+            .barba-container {
+                opacity: 1;
+            }
+        </style>
+    </noscript>
     <link rel="stylesheet" rel="preload" href="https://fonts.googleapis.com/css?family=Raleway">
 </head>
 <body>
