--- a/src/html-partials/nav.html
+++ b/src/html-partials/nav.html
@@ -2,7 +2,7 @@
     <nav>
         <a href="index.html" class="logo">
             <svg version="1.1" class="logo-letters" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-         viewBox="0 0 159.9 100.7" style="enable-background:new 0 0 159.9 100.7;" xml:space="preserve">
+         viewBox="0 0 159.9 100.7" width="120px" height="120px" xml:space="preserve">
             <g id="XMLID_16_">
                 <path id="XMLID_17_" class="first-letter" d="M0.9,1.4c6.9-3.6,12.2,4.1,12.2,9.2c0,10.2-1.5,37.3-0.8,39.6c0.7-3,11.4-39.3,22.2-32.9
                     c8,4.8,7.5,15.2,7.5,16.8c7-21.9,14-22.4,15.7-21.9c15.7,4,9.8,33.3,9.8,43.2c-0.7,8.1-0.6,22.1-0.4,30.2
