Change some copy

--- a/src/about.html
+++ b/src/about.html
@@ -88,7 +88,7 @@
                     <svg viewBox="0 0 100 100" class="icon">
                         <use xlink:href="images/svg-symbols.svg#wrench"></use>
                     </svg>
-                    <p class="text">Finding the right tools for the perfect build process</p>
+                    <p class="text">Using the right tools for the perfect build process</p>
                 </li>
 
                 <li>
@@ -104,12 +104,11 @@
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
-                        <use xlink:href="images/svg-symbols.svg#agile"></use>
-                    </svg>
-                    <p class="text">Agile methodologies and clear, open communication</p>
+                    <div class="icon jam"><abbr title="JavaScript, APIs and Markup">JAMstack</abbr></div>
+                    <p class="text"><span><a href="https://jamstack.org/" target="_blank">JAMstack</a> is my jam</span></p>
                 </li>
             </ul>
+
             <h2>Outside of web development</h2>
             <p>I love hiking and running, especially out in the woods.</p>
             <p>Food is very important to me, I enjoy every part of the process : picking the right ingredients, cooking (I'm not big on cakes, but I like making just about anything else), and sharing a meal in good company. I find the whole process very similar to web development in some aspects.</p>
