Change some more copy

--- a/src/resume.html
+++ b/src/resume.html
@@ -45,9 +45,10 @@
                         <div class="year">May 2012 - Dec 2015</div>
                     </div>
                     <div class="description">
-                        I was the <b>webmaster</b> and <b>Director</b> in charge of public policy for OpenForum Europe, a not-for-profit industry organisation aiming to
-                        accelerate and broaden the use of Open Source Software among businesses, consumers and governments.
+                        I was a <b>policy officer</b> and <b>webmaster</b> for OpenForum Europe, a not-for-profit industry organisation aiming to
+                        accelerate and broaden the use of Open Source Software among businesses, consumers and governments. I later joined the board of director as <b>Director of European policy</b>.
                         <ul>
+                            <li>Lead and helped grow the policy team in the Brussels office. I started as the only person working there, and when I left we had two policy officers, a director and an intern.</li>
                             <li>Designed and developed the <a href="http://www.openforumeurope.org/" target="_blank">new OFE site</a> from scratch using a custom WordPress theme. I also organised the migration of content from the
                                 <a href="http://archive.openforumeurope.org/" target="_blank">old website</a> running on Plone.</li>
                             <li>Created a <a href="http://dsm.openforumeurope.org/" target="_blank">WordPress site</a> in support of a campaign and distribution of an OFE paper.</li>
