--- a/src/html-partials/head.html
+++ b/src/html-partials/head.html
@@ -32,6 +32,6 @@
             }
         </style>
     </noscript>
-    <link rel="stylesheet" rel="preload" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" rel="preload" href="https://fonts.googleapis.com/css?family=Raleway:300,400,700">
 </head>
 <body>
