Fix some flexbox and SVG bugs on IE11

--- a/src/about.html
+++ b/src/about.html
@@ -33,28 +33,28 @@
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#speedometer"></use>
                     </svg>
                     <p class="text">Lightweight, performant websites</p>
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#a11y"></use>
                     </svg>
                     <p class="text">Accessibility — the web is for everyone</p>
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#smartphone"></use>
                     </svg>
                     <p class="text">Beautiful, clearly understandable UI</p>
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#react"></use>
                     </svg>
                     <p class="text"><span>The right framework for the right job (<a href="https://facebook.github.io/react/" target="_blank">React</a> <em>is</em> pretty cool though)</span></p>
@@ -71,28 +71,28 @@
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#eye"></use>
                     </svg>
                     <p class="text">Attention to detail : it's the little things that matter</p>
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#team"></use>
                     </svg>
                     <p class="text">Code reviews, discussing and sharing best practices</p>
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#wrench"></use>
                     </svg>
                     <p class="text">Using the right tools for the perfect build process</p>
                 </li>
 
                 <li>
-                    <svg viewBox="0 0 100 100" class="icon">
+                    <svg class="icon">
                         <use xlink:href="images/svg-symbols.svg#styleguide"></use>
                     </svg>
                     <p class="text">Styleguide and design systems to build consistent UI at scale</p>
