--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -1,19 +1,19 @@
     <footer>
         <div class="social">
             <a href="https://www.linkedin.com/in/ma%C3%ABl-brunet-b5876118/" target="_blank" class="social-link">
-                <svg viewBox="0 0 100 100" class="social-icon">
+                <svg class="social-icon">
                     <use xlink:href="images/svg-symbols.svg#linkedin"></use>
                 </svg>
             </a>
 
             <a href="https://codepen.io/Maelig/" target="_blank" class="social-link">
-                <svg viewBox="0 0 100 100" class="social-icon">
+                <svg class="social-icon">
                     <use xlink:href="images/svg-symbols.svg#codepen"></use>
                 </svg>
             </a>
 
             <a href="https://twitter.com/maelb" target="_blank" class="social-link">
-                <svg viewBox="0 0 100 100" class="social-icon">
+                <svg class="social-icon">
                     <use xlink:href="images/svg-symbols.svg#twitter"></use>
                 </svg>
             </a>
