Change some copy

--- a/src/resume.html
+++ b/src/resume.html
@@ -12,11 +12,11 @@
             <h2>Summary</h2>
             <ul class="summary">
                 <li>I am a self-taught front-end web developer and UI designer, based in Brussels (Belgium).</li>
-                <li>I believe coding standards and best practices are crucial for the long-term success of a digital product. I am not a "code ninja". If anything, I am a <a href="https://css-tricks.com/on-style-maintenance/" target="_blank">code janitor</a>.</li>
-                <li>I believe that a good user interface is like a joke : you shouldn't have to explain it.</li>
-                <li>I enjoy making website for real humans, not for Awwwards or to show off whatever new tech is currently <i>in vogue</i>.</li>
-                <li>I see teamwork, open communication and empathy as essential to working as a group effectively, and delivering quality. </li>
                 <li>I am highly proficient in the technologies that are at the core of front-end development : HTML, CSS and Javascript. I believe very strong knowledge of these foundations is essential to being a good front-end developer, and everything else (frameworks in particular) can be learned as needed.</li>
+                <li>I believe coding standards and best practices are crucial to the long-term success of a digital product. I am not a "code ninja". If anything, I like to think of myself as a <a href="https://css-tricks.com/on-style-maintenance/" target="_blank">code janitor</a>.</li>
+                <li>I believe that a good user interface is like a joke : you shouldn't have to explain it.</li>
+                <li>I enjoy making websites for human beings, not for Awwwards or to show off whatever new tech is currently <i>in vogue</i>.</li>
+                <li>I see open communication, empathy and inclusivity as the essential components of a well-functioning team.</li>
             </ul>
 
             <hr>
