Improve display of about page and hide copyright info on mobile

--- a/src/about.html
+++ b/src/about.html
@@ -105,7 +105,7 @@
 
                 <li>
                     <div class="icon jam"><abbr title="JavaScript, APIs and Markup">JAMstack</abbr></div>
-                    <p class="text"><span><a href="https://jamstack.org/" target="_blank">JAMstack</a> is my jam</span></p>
+                    <p class="text"><span><a href="https://jamstack.org/" target="_blank">JAMstack</a> is my jam.</span></p>
                 </li>
             </ul>
 
