Add link to github and improve footer mobile design

--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -6,6 +6,12 @@
                 </svg>
             </a>
 
+            <a href="https://github.com/maeligg" target="_blank" class="social-link">
+                <svg class="social-icon">
+                    <use xlink:href="images/svg-symbols.svg#github"></use>
+                </svg>
+            </a>
+
             <a href="https://codepen.io/Maelig/" target="_blank" class="social-link">
                 <svg class="social-icon">
                     <use xlink:href="images/svg-symbols.svg#codepen"></use>
