Change some copy

--- a/src/about.html
+++ b/src/about.html
@@ -100,12 +100,12 @@
 
                 <li>
                     <div class="icon kiss"><abbr title="Keep It Simple, Stupid">KISS</abbr></div>
-                    <p class="text">I believe one of the key responsibilities of a good developer is to manage or reduce complexity.</p>
+                    <p class="text">Avoid unnecessary complexity.</p>
                 </li>
 
                 <li>
                     <div class="icon jam"><abbr title="JavaScript, APIs and Markup">JAMstack</abbr></div>
-                    <p class="text"><span><a href="https://jamstack.org/" target="_blank">JAMstack</a> is my jam.</span></p>
+                    <p class="text">The <span><a href="https://jamstack.org/" target="_blank">JAMstack</a> is my jam.</span></p>
                 </li>
             </ul>
 
