--- a/src/html-partials/footer.html
+++ b/src/html-partials/footer.html
@@ -25,7 +25,7 @@
             </a>
         </div>
         <div class="copyright">
-            Hand-crafted with ♥️ and ☕ by myself. No lines of JQuery were <span class="strike">hurt</span> used in making this website. Code source available on
+            Hand-crafted with ♥️ and ☕. No lines of JQuery were <span class="strike">hurt</span> used in making this website. Code source available on
             <a href="https://github.com/maeligg/maelbrunet" target="_blank">GitHub</a>. Try typing "unicorn" anywhere.
         </div>
     </footer>
